--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -96,6 +96,8 @@ jobs:
       id-token: write
     steps:
       - uses: actions/download-artifact@v4
+        with:
+          merge-multiple: "true"
       - name: Publish to PyPI
         uses: PyO3/maturin-action@v1
         with:
