--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["maturin>=1.3,<2.0"]
 build-backend = "maturin"
 
 [project]
-name = "rlbot_flatbuffers_py"
+name = "rlbot_flatbuffers"
 requires-python = ">=3.10"
 classifiers = [
     "Programming Language :: Rust",
