--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        target: [x86_64]
+        target: [x86_64-unknown-linux-gnu]
     steps:
       - uses: actions/checkout@v4
         with:
@@ -35,7 +35,9 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.target }}
-          args: --release --out dist --find-interpreter
+          rust-toolchain: nightly
+          rust-components: rust-src
+          args: --release --out dist --find-interpreter -Z build-std=std,panic_abort
           sccache: 'true'
           manylinux: auto
       - name: Upload wheels
@@ -48,7 +50,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        target: [x64]
+        target: [x86_64-pc-windows-msvc]
     steps:
       - uses: actions/checkout@v4
         with:
@@ -61,7 +63,9 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.target }}
-          args: --release --out dist --find-interpreter
+          rust-toolchain: nightly
+          rust-components: rust-src
+          args: --release --out dist --find-interpreter -Z build-std=std,panic_abort
           sccache: 'true'
       - name: Upload wheels
         uses: actions/upload-artifact@v4
