--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -8,7 +8,6 @@ name: CI
 on:
   push:
     branches:
-      - main
       - master
     tags:
       - '*'
@@ -36,10 +35,10 @@ jobs:
         with:
           target: ${{ matrix.target }}
           rust-toolchain: nightly
-          rust-components: rust-src
           args: --release --out dist --find-interpreter -Z build-std=std,panic_abort
           sccache: 'true'
           manylinux: auto
+          before-script-linux: rustup component add rust-src --toolchain nightly
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
@@ -58,13 +57,13 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.10'
-          architecture: ${{ matrix.target }}
+      - name: Install rust-src
+        run: rustup component add rust-src --toolchain nightly
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.target }}
           rust-toolchain: nightly
-          rust-components: rust-src
           args: --release --out dist --find-interpreter -Z build-std=std,panic_abort
           sccache: 'true'
       - name: Upload wheels
