--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rlbot-flatbuffers-py"
-version = "0.11.3"
+version = "0.11.4"
 edition = "2021"
 description = "A Python module implemented in Rust for serializing and deserializing RLBot's flatbuffers"
 repository = "https://github.com/VirxEC/rlbot_flatbuffers_py"
@@ -21,7 +21,7 @@ crate-type = ["cdylib"]
 [dependencies]
 pyo3 = { version = "0.23.0", features = [] }
 serde = "1.0.197"
-flatbuffers = "24.3.25"
+flatbuffers = "=24.3.25"
 # get-size appears to be unmaintained but it's too useful here
 # forked and updated deps
 get-size = { git = "https://github.com/VirxEC/get-size", branch = "update", features = ["derive"] }
